Fixed problem on header cells in IE11 where the cell was overflowing after applying "position: relative"

--- a/css/jsgrid.css
+++ b/css/jsgrid.css
@@ -47,6 +47,7 @@
 }
 .jsgrid-header-cell {
     position: relative;
+    background-clip: padding-box !important; 
 }
 
 .jsgrid-align-left {
